add send email with custom message

--- a/functions/send_email/ticket_html_tmpl.html
+++ b/functions/send_email/ticket_html_tmpl.html
@@ -174,7 +174,7 @@ body {font-family: 'Poppins', sans-serif;}
     <tbody>
       <tr>
         <td style="padding:30px 0px 40px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: center"><span style="color: #80817f; font-size: 12px">
-            <h1>THANK YOU FOR YOUR PURCHASE!</h1></span></div>
+            <h1>$heading_message</h1></span></div>
 <div style="font-family: inherit; text-align: center"><br></div>
 <div style="font-family: inherit; text-align: center"><span style="color: #80817f; font-size: 24px"><strong>Your Event Ticket</strong></span></div><div></div></div></td>
       </tr>
