add info about meal pref in ticket email

--- a/functions/send_email/ticket_body.html
+++ b/functions/send_email/ticket_body.html
@@ -183,7 +183,12 @@ $total_row
     <tr>
     <td style="padding:10px 0px 20px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
         <div>
-        <div style="font-family: inherit; text-align: center"><span style="color: #80817f; font-size: 12px"><strong>Find out more details and view your ticket details online.</strong></span></div>
+        <div style="font-family: inherit; text-align: center">
+            <span style="color: #80817f; font-size: 12px">
+                <strong>Find out more details and view your ticket online.</strong><br />
+                <em>If your ticket includes the Saturday Dinner you can check and modify your meal preferences online by following this link.</em>
+            </span>
+        </div>
         <div></div>
         </div>
     </td>
