--- a/functions/send_email/example.html
+++ b/functions/send_email/example.html
@@ -434,7 +434,11 @@ body {font-family: 'Poppins', sans-serif;}
   <table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="8fd711e6-aecf-4663-bf53-6607f08b57e9.2" data-mc-module-version="2019-10-22">
     <tbody>
       <tr>
-        <td style="padding:10px 0px 20px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: center"><span style="color: #80817f; font-size: 12px"><strong>Find out more details and view your ticket details online.</strong></span></div><div></div></div></td>
+        <td style="padding:10px 35px 20px 35px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content"><div><div style="font-family: inherit; text-align: center">
+          <span style="color: #80817f; font-size: 12px">
+          <strong>Find out more details and view your ticket details online.</strong><br />
+          <em>If your ticket includes the Saturday Dinner you can check and modify your meal preferences online by following this link.</em>
+        </span></div><div></div></div></td>
       </tr>
     </tbody>
   </table><table border="0" cellpadding="0" cellspacing="0" class="module" data-role="module-button" data-type="button" role="module" style="table-layout:fixed;" width="100%" data-muid="0f986857-87df-4c0e-934f-e77105f78192">
@@ -461,7 +465,40 @@ body {font-family: 'Poppins', sans-serif;}
       </tr>
     </tbody>
   </table>
-
+  <table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="8fd711e6-aecf-4663-bf53-6607f08b57e9" data-mc-module-version="2019-10-22">
+    <tbody>
+      <tr>
+        <td style="padding:30px 0px 40px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
+          <div>
+            <div style="font-family: inherit; text-align: center"><br></div>
+            <div style="font-family: inherit; text-align: center">
+                <span style="color: #80817f; font-size: 24px"><strong>Transferred From</strong></span>
+            </div>
+            <div></div>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="8fd711e6-aecf-4663-bf53-6607f08b57e9.1" data-mc-module-version="2019-10-22">
+    <tbody>
+      <tr>
+        <td style="padding:0px 40px 40px 40px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
+          <div>
+            <div style="font-family: inherit; text-align: inherit">
+                <span style="color: #80817f; font-size: 16px"><strong>Name:</strong></span>
+                <span style="color: #80817f; font-size: 16px"> $oldname</span>
+            </div>
+            <div style="font-family: inherit; text-align: inherit">
+                <span style="color: #80817f; font-size: 16px"><strong>Email:</strong></span>
+                <span style="color: #80817f; font-size: 16px"> $oldemail</span>
+            </div>
+            <div></div>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
   <table class="module" role="module" data-type="text" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="20d6cd7f-4fad-4e9c-8fba-f36dba3278fc" data-mc-module-version="2019-10-22">
     <tbody>
       <tr>
