send email to list of recommended emails

--- a/functions/send_email/group_body.html
+++ b/functions/send_email/group_body.html
@@ -23,7 +23,7 @@
         <div>
         <div style="font-family: inherit; text-align: inherit">
             <span style="color: #80817f; font-size: 16px">
-                <p><strong>You have been recommended to join a table for the gala dinner.</strong></p><br />
+                <p><strong>You have been recommended to join a table for the Merseyside Latin Festival gala dinner.</strong></p><br />
                 <p>
                     We have not added you to the group yet, $body_text
                     Use the group code below to join your friends, make sure you all enter the same code.
@@ -31,7 +31,6 @@
                 <br />
                 <p>
                     We can not gurantee that you will all be sat together, but we will try our best to seat you with the people in your group.
-                    Groups are limited to 10.
                 </p>
             </span>          
         </div>
