--- a/functions/send_email/group_example.html
+++ b/functions/send_email/group_example.html
@@ -107,10 +107,9 @@
                                                 <div>
                                                 <div style="font-family: inherit; text-align: center">
                                                     <span style="color: #80817f; font-size: 12px">
-                                                    <h1>Join a table for dinner!</h1>
+                                                    <h1>$rec_name wants you to join their group!</h1>
                                                     </span>
                                                 </div>
-                                                <div style="font-family: inherit; text-align: center"><br></div>
                                                 <!-- <div style="font-family: inherit; text-align: center"><span style="color: #80817f; font-size: 24px"><strong></strong></span></div> -->
                                                 <div></div>
                                                 </div>
@@ -125,42 +124,32 @@
                                                 <div>
                                                 <div style="font-family: inherit; text-align: inherit">
                                                     <span style="color: #80817f; font-size: 16px">
-                                                        <p><strong>You have been recommended to join a table for the gala dinner.</strong></p><br />
+                                                        <p><strong>You have been recommended to join a table for the Merseyside Latin Festival gala dinner.</strong></p><br />
                                                         <p>
-                                                            We have not added you to the group yet, but when you purchase your ticket which includes dinner you will have the choice to enter a group code.
-                                                            For your seating group enter the code below to join your friends, make sure you al enter the same code.
+                                                            We have not added you to the group yet. $body_text
+                                                            Use the group code below to join your friends, make sure you all enter the same code.
                                                         </p>
                                                         <br />
-                                                        <p>
+                                                        <p><i>
                                                             We can not gurantee that you will all be sat together, but we will try our best to seat you with the people in your group.
-                                                        </p>
+                                                          </i></p>
                                                     </span>          
                                                 </div>
                                             </td>
                                             </tr>
                                             <tr>
-                                                <td style="padding:30px 0px 40px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
+                                                <td style="padding:00px 0px 40px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                     <div>
                                                     <div style="font-family: inherit; text-align: center">
                                                         <span style="color: #80817f; font-size: 12px">
                                                         <h1>ENTER THE GROUP CODE:</h1>
-                                                        <h2>$group_code</h2>
+                                                        <h2 style="color: rgb(208 52 17)">$group_code</h2>
                                                         </span>
                                                     </div>
-                                                    <div style="font-family: inherit; text-align: center"><br></div>
                                                     <!-- <div style="font-family: inherit; text-align: center"><span style="color: #80817f; font-size: 24px"><strong></strong></span></div> -->
                                                     <div></div>
                                                     </div>
                                                 </td>
-                                            </tr>
-                                        </tbody>
-                                        </table>
-                                        
-                                        <table class="module" role="module" data-type="spacer" border="0" cellpadding="0" cellspacing="0" width="100%" style="table-layout: fixed;" data-muid="9bbc393c-c337-4d1a-b9f9-f20c740a0d44">
-                                        <tbody>
-                                            <tr>
-                                            <td style="padding:0px 0px 30px 0px;" role="module-content" bgcolor="">
-                                            </td>
                                             </tr>
                                         </tbody>
                                         </table>
@@ -172,8 +161,8 @@
                                                 <tbody>
                                                     <tr>
                                                     <td align="center" bgcolor="#ffecea" class="inner-td" style="border-radius:6px; font-size:24px; text-align:center; background-color:inherit;">
-                                                        <a href="$ticket_link " style="background-color:#2ED1FF; border:1px solid #2ED1FF; border-color:#2ED1FF; border-radius:6px; border-width:1px; color:#ffffff; display:inline-block; font-size:12px; font-weight:700; letter-spacing:0px; line-height:normal; padding:12px 40px 12px 40px; text-align:center; text-decoration:none; border-style:solid; font-family:inherit;" target="_blank">
-                                                            <h1>BUY YOUR TICKET</h1>
+                                                        <a href="$ticket_link" style="background-color:#2ED1FF; border:1px solid #2ED1FF; border-color:#2ED1FF; border-radius:6px; border-width:1px; color:#ffffff; display:inline-block; font-size:12px; font-weight:700; letter-spacing:0px; line-height:normal; padding:12px 40px 12px 40px; text-align:center; text-decoration:none; border-style:solid; font-family:inherit;" target="_blank">
+                                                            <h1>$button_text</h1>
                                                         </a>
                                                     </td>
                                                     </tr>
