don't always send discount code

--- a/functions/send_email/meal_upgrade_ticket_body.html
+++ b/functions/send_email/meal_upgrade_ticket_body.html
@@ -39,7 +39,7 @@
                 <span style="color: #80817f; font-size: 16px">
                     <p><strong>This ticket does not include access to the gala dinner.</strong></p><br />
                     <p>
-                        If you would like to attend the gala dinner you can buy the dinner ticket for a disocunted price using 
+                        If you would like to attend the gala dinner you can buy the dinner ticket using 
                         <a href="$upgrade_link">this personal link</a>.
                         This link is personal to this ticket so make sure to use this link if you want to purchase the upgrade.
                         <br />
