Update to yearless logo

--- a/functions/send_email/header_footer.html
+++ b/functions/send_email/header_footer.html
@@ -82,7 +82,7 @@
                                                         <tbody>
                                                           <tr>
                                                             <td style="font-size:6px; line-height:10px; padding:0px 0px 0px 0px;" valign="top" align="center">
-                                                              <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px;" width="200" alt="" data-proportionally-constrained="true" data-responsive="false" src="https://assets.tina.io/1d3a8339-bf5e-4dc8-bdba-55a1bf3fa798/mlf-colour-full-2.svg" height="200">
+                                                              <img class="max-width" border="0" style="display:block; color:#000000; text-decoration:none; font-family:Helvetica, arial, sans-serif; font-size:16px;" width="200" alt="" data-proportionally-constrained="true" data-responsive="false" src="https://assets.tina.io/1d3a8339-bf5e-4dc8-bdba-55a1bf3fa798/MLF%20Yearless.svg" height="200">
                                                             </td>
                                                           </tr>
                                                         </tbody>
