--- a/functions/send_email/ticket_body.html
+++ b/functions/send_email/ticket_body.html
@@ -203,7 +203,7 @@ $total_row
         <tbody>
             <tr>
             <td align="center" bgcolor="#ffecea" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
-                <a href="$ticket_link " style="background-color:#2ED1FF; border:1px solid #2ED1FF; border-color:#2ED1FF; border-radius:0px; border-width:1px; color:#ffffff; display:inline-block; font-size:12px; font-weight:700; letter-spacing:0px; line-height:normal; padding:12px 40px 12px 40px; text-align:center; text-decoration:none; border-style:solid; font-family:inherit;" target="_blank">View Online</a>
+                <a href="$ticket_link " style="background-color:#2ED1FF; border:1px solid #2ED1FF; border-color:#2ED1FF; border-radius:0px; border-width:1px; color:#ffffff; display:inline-block; font-size:12px; font-weight:700; letter-spacing:0px; line-height:normal; padding:12px 40px 12px 40px; text-align:center; text-decoration:none; border-style:solid; font-family:inherit;" target="_blank">Meal Preferences</a>
             </td>
             </tr>
         </tbody>
